fix: re-enable vertical scroll on mobile

--- a/src/styles/layout/_structure.scss
+++ b/src/styles/layout/_structure.scss
@@ -31,6 +31,7 @@
     box-shadow: 0 0 3.125rem rgba(0, 0, 0, 0.7);
     flex-shrink: 0;
     z-index: 1;
+    touch-action: pan-y pinch-zoom;
 
     &.responsive-mode {
         width: 100vw !important;
